# cudagrad

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsCPU.txt  CMakeListsCUDA.txt  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  README.md  README.py  Tensor.ipynb  cudagrad.hpp  dev-requirements.txt  dev-setup.sh  example.cpp  example.py  gh-release.sh  install.sh  logo.py  makefile.py  manage.sh  ops.cu  performance.db  performance.sql  prepublish.sh  profile.ipynb  project.py  publish.sh  pyproject.toml  requirements.txt  setup.py  test.cpp  test.sh
.github/workflows/: lint.yml  test.yml
aten/: run.py
benchmarks/_cudagrad/: mnist.py  moons.py  or.py  xor.py
benchmarks/_cudagrad/profiles/: mnist.prof  moons.prof  or.prof  xor.prof
benchmarks/_torch/: mnist.py  moons.py  or.py  xor.py
benchmarks/_torch/profiles/: moons.prof  or.prof  xor.prof
cuda/: ops.cu
cudagrad/: README.md  __init__.py  linear.py  mlp.py  mnist.py  moons.py  neuron.py  nn.py  tensor.pyi
db/: connect.py  db.py  schema.sql
examples/: example.cpp  example.py  mnist.py  moons.py  or.cpp  or.py  xor.cpp  xor.py
examples/profiles/: mnist.prof  moons.prof  or.prof  xor.prof
mlp/: mlp.ipynb  mlp.py
notes/: NOTES.md
profiles/: linear.prof  mlp.prof  mnist.prof  moons.prof  or.prof  xor.prof
src/: bindings.cpp  cudagrad.hpp  main.cpp  operations.cpp  operations.cu  ops.cu  tensor.hpp
tests/: CMakeLists.txt  CMakeListsCPU.txt  CMakeListsCUDA.txt  test.cpp  test.py  test_backward.py  test_forward.py  test_gradient_checking.py  test_mlp.py  test_mlp_backward.py  test_mlp_forward.py  test_mlp_grad_check.py  test_nn.py  test_setup.cu  test_tensor.cpp
