cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
project(tensor_test)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CUDA_ARCHITECTURES "86")
enable_language(CUDA)

find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
include_directories(${Python3_INCLUDE_DIRS})

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../pybind11 ${CMAKE_CURRENT_BINARY_DIR}/pybind11/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../pybind11/include)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../googletest ${CMAKE_CURRENT_BINARY_DIR}/googletest)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../cccl ${CMAKE_CURRENT_BINARY_DIR}/cccl)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/cccl/thrust)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/cccl/libcudacxx/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/cccl/cub)

add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../src/operations.cu)
target_link_libraries(${PROJECT_NAME} gtest gtest_main ${Python3_LIBRARIES})
target_compile_options(${PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xcompiler -Icccl/thrust,-Icccl/libcudacxx/include,-Icccl/cub>)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../src/tensor.hpp ${CMAKE_CURRENT_BINARY_DIR}/tensor.hpp COPYONLY)
